[gd_scene load_steps=38 format=3 uid="uid://bqcadimqyfugq"]

[ext_resource type="Texture2D" uid="uid://c3lst2ua1ichk" path="res://assets/sprites/enemies/fly/blue_fly_attack_anim_srip_3.png" id="1_i8mjl"]
[ext_resource type="Script" uid="uid://4p876ag87jbe" path="res://entities/characters/enemies/bat/bat.gd" id="1_ksiqf"]
[ext_resource type="Shader" uid="uid://dfm6nh8rjqufc" path="res://resources/shaders/hurt.gdshader" id="2_hl2id"]
[ext_resource type="Texture2D" uid="uid://bge3kr75bg6yl" path="res://assets/sprites/enemies/fly/blue_fly_death_anim_strip_5.png" id="2_klw3k"]
[ext_resource type="Texture2D" uid="uid://bbit0141w3gca" path="res://assets/sprites/enemies/fly/blue_fly_idle_or_flying_anim_strip_3.png" id="3_vg1cm"]
[ext_resource type="Texture2D" uid="uid://dao3ouy7r7ps7" path="res://assets/sprites/enemies/fly/bat_sleeping.png" id="4_gxoni"]
[ext_resource type="PackedScene" uid="uid://d3wdau0mkkvja" path="res://entities/utils/knockback_component/knockback_component.tscn" id="6_xi78h"]
[ext_resource type="PackedScene" uid="uid://dtw2oe6rya3fc" path="res://entities/utils/health_component/health_component.tscn" id="7_hl2id"]
[ext_resource type="PackedScene" uid="uid://w7y42hwt41uu" path="res://entities/controllers/movement_controller/movement_controller.tscn" id="8_1tqix"]
[ext_resource type="Script" uid="uid://dw3d2w1xljy02" path="res://resources/movement_module_data.gd" id="9_r8nds"]
[ext_resource type="PackedScene" uid="uid://dd4ds2iiul82s" path="res://entities/utils/hitbox_component/hitbox_component.tscn" id="10_t25be"]
[ext_resource type="Script" uid="uid://qvaw75vnpejk" path="res://entities/characters/enemies/bat/movement_component.gd" id="10_xi78h"]
[ext_resource type="PackedScene" uid="uid://bdhst7l51m64h" path="res://entities/controllers/audio_controller/audio_controller.tscn" id="13_r8nds"]
[ext_resource type="AudioStream" uid="uid://83r4qysoy50r" path="res://assets/sounds/sfx/enemies/bat/wings.wav" id="14_t25be"]
[ext_resource type="AudioStream" uid="uid://ddb52u4jj0ndd" path="res://assets/sounds/sfx/enemies/bat/scream.wav" id="15_qia56"]
[ext_resource type="AudioStream" uid="uid://bxc7xitx8lho0" path="res://assets/sounds/sfx/enemies/bat/attack.wav" id="15_t25be"]
[ext_resource type="Script" uid="uid://clxebky3sk07a" path="res://entities/actions/attack/attack.gd" id="16_8rft6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1tqix"]
shader = ExtResource("2_hl2id")
shader_parameter/flash_amount = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_0jeqv"]
atlas = ExtResource("1_i8mjl")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_jaqui"]
atlas = ExtResource("1_i8mjl")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksiqf"]
atlas = ExtResource("1_i8mjl")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_xi78h"]
atlas = ExtResource("2_klw3k")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl2id"]
atlas = ExtResource("2_klw3k")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tqix"]
atlas = ExtResource("2_klw3k")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8nds"]
atlas = ExtResource("2_klw3k")
region = Rect2(24, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_t25be"]
atlas = ExtResource("2_klw3k")
region = Rect2(32, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rft6"]
atlas = ExtResource("3_vg1cm")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_qia56"]
atlas = ExtResource("3_vg1cm")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ih5lq"]
atlas = ExtResource("3_vg1cm")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj8fr"]
atlas = ExtResource("4_gxoni")
region = Rect2(0, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_p502a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jeqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jaqui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksiqf")
}],
"loop": true,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xi78h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl2id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tqix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8nds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t25be")
}],
"loop": false,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rft6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qia56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ih5lq")
}],
"loop": true,
"name": &"fly",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj8fr")
}],
"loop": false,
"name": &"sleeping",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mgd4o"]
size = Vector2(8, 7)

[sub_resource type="Resource" id="Resource_ksiqf"]
script = ExtResource("9_r8nds")
module = NodePath("../KnockbackComponent")
priority = 1
metadata/_custom_type_script = "uid://dw3d2w1xljy02"

[sub_resource type="Resource" id="Resource_hl2id"]
script = ExtResource("9_r8nds")
module = NodePath("../MovementComponent")
priority = 0
metadata/_custom_type_script = "uid://dw3d2w1xljy02"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8rft6"]
size = Vector2(7, 6)

[sub_resource type="CircleShape2D" id="CircleShape2D_ksiqf"]
radius = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xi78h"]
radius = 40.0

[node name="Bat" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 48
script = ExtResource("1_ksiqf")
fly_distance = 70
speed = 30
damage = 1
initial_direction = 1
cooldown = 1.5
health = 1

[node name="Animator" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_1tqix")
sprite_frames = SubResource("SpriteFrames_p502a")
animation = &"sleeping"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_mgd4o")

[node name="KnockbackComponent" parent="." instance=ExtResource("6_xi78h")]

[node name="HealthComponent" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("7_hl2id")]
parent = NodePath("..")

[node name="MovementController" parent="." instance=ExtResource("8_1tqix")]
movement_modules_data = Array[ExtResource("9_r8nds")]([SubResource("Resource_ksiqf"), SubResource("Resource_hl2id")])

[node name="MovementComponent" type="Node" parent="." node_paths=PackedStringArray("awake_area", "attack_area", "parent")]
script = ExtResource("10_xi78h")
awake_area = NodePath("../AwakeArea")
attack_area = NodePath("../AttackArea")
parent = NodePath("..")

[node name="Timer" type="Timer" parent="MovementComponent"]
one_shot = true

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component", "knockback_component") instance=ExtResource("10_t25be")]
visible = false
collision_layer = 4
collision_mask = 66
health_component = NodePath("../HealthComponent")
knockback_component = NodePath("../KnockbackComponent")

[node name="HitboxComponentShape" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_8rft6")

[node name="AwakeArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AwakeArea"]
shape = SubResource("CircleShape2D_ksiqf")
debug_color = Color(0.620917, 0.626865, 0.629412, 0.42)

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_xi78h")
debug_color = Color(0.808055, 0.646368, 0.0330862, 0.42)

[node name="AudioController" parent="." instance=ExtResource("13_r8nds")]

[node name="Fly" type="AudioStreamPlayer2D" parent="AudioController"]
stream = ExtResource("14_t25be")
volume_db = -5.0
max_distance = 250.0
bus = &"SFX"

[node name="Scream" type="AudioStreamPlayer2D" parent="AudioController"]
stream = ExtResource("15_qia56")
volume_db = -5.0
max_distance = 250.0
bus = &"SFX"

[node name="Attack" type="AudioStreamPlayer2D" parent="AudioController"]
stream = ExtResource("15_t25be")
volume_db = -3.0
max_distance = 250.0
bus = &"SFX"

[node name="Attack" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0
script = ExtResource("16_8rft6")
should_use_attacked_entities = true
metadata/_custom_type_script = "uid://clxebky3sk07a"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
visible = false
shape = SubResource("RectangleShape2D_mgd4o")

[connection signal="animation_changed" from="Animator" to="." method="_on_animator_animation_changed"]
[connection signal="animation_finished" from="Animator" to="." method="_on_animator_animation_finished"]
[connection signal="frame_changed" from="Animator" to="." method="_on_animator_frame_changed"]
[connection signal="body_entered" from="AwakeArea" to="." method="_on_awake_area_player_entered"]
[connection signal="body_exited" from="AwakeArea" to="." method="_on_awake_area_player_exited"]
